change display to inline-block to fix alignment issues

--- a/packages/formation/sass/modules/_m-action-link.scss
+++ b/packages/formation/sass/modules/_m-action-link.scss
@@ -6,11 +6,12 @@ a.vads-c-action-link--blue, a.vads-c-action-link--green, a.vads-c-action-link--w
     content: "\f138";
     position: absolute; 
     left: 0px;
-    top: 4px;
+    top: -4px;
   }
   font-weight: bold;
   padding: 4px 0 4px 38px;
   position: relative;
+  display: inline-block;
 }
 
 a.vads-c-action-link--blue:before {
